# macfw

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
docs/: publishing.md
macfw/: __main__.py  cli.py  config.py  manager.py  pf.py
tests/: test_cli.py  test_config.py  test_manager.py  test_pf.py
