[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macfw"
version = "0.1.0"
description = "A small pf-based firewall manager for macOS with a ufw-like CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "tudoujun" }
]
keywords = ["macos", "pf", "firewall", "ufw", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]

[project.scripts]
macfw = "macfw.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["macfw*"]
